Identified unique indicators

--- a/data_explore.ipynb
+++ b/data_explore.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVp+lhwv5YpdZAPbJydO2L",
+      "authorship_tag": "ABX9TyNFVC3B5qxI7jy5KxaFklum",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,19 +23,19 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/M-Rathnayake/House-Price-Prediction/blob/main/data_explore.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/M-Rathnayake/Sri-Lanka-Developers-Indicators-Analysis/blob/main/data_explore.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 533
         },
         "id": "omYvGujrcUFc",
-        "outputId": "ab07a2aa-8322-489d-e648-a91b7cc856be"
+        "outputId": "38b64b72-7f55-4272-c00c-9180f56d0180"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-87a94ff1-0bf8-455f-93db-e5b2842d8b3b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7751d62c-174a-41bc-8318-43b756e9955f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -244,7 +244,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-87a94ff1-0bf8-455f-93db-e5b2842d8b3b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7751d62c-174a-41bc-8318-43b756e9955f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -296,12 +296,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-87a94ff1-0bf8-455f-93db-e5b2842d8b3b button.colab-df-convert');\n",
+              "        document.querySelector('#df-7751d62c-174a-41bc-8318-43b756e9955f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-87a94ff1-0bf8-455f-93db-e5b2842d8b3b');\n",
+              "        const element = document.querySelector('#df-7751d62c-174a-41bc-8318-43b756e9955f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -321,8 +321,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-520f8458-0a9b-4ece-99d8-048848497e8a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-520f8458-0a9b-4ece-99d8-048848497e8a')\"\n",
+              "    <div id=\"df-1047741c-5de3-4403-a47a-c6c41f2f9357\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1047741c-5de3-4403-a47a-c6c41f2f9357')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -441,7 +441,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-520f8458-0a9b-4ece-99d8-048848497e8a button');\n",
+              "            document.querySelector('#df-1047741c-5de3-4403-a47a-c6c41f2f9357 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -453,19 +453,70 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "variable_name": "dataset"
+              "variable_name": "df"
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ],
       "source": [
         "import pandas as pd\n",
         "\n",
         "#the first 4 rows are skipped, which usually contain metadata\n",
-        "dataset = pd.read_csv('/content/API_LKA_DS2_en_csv_v2_100021.csv', skiprows=4)\n",
-        "dataset.head()\n"
+        "df = pd.read_csv('/content/API_LKA_DS2_en_csv_v2_100021.csv', skiprows=4)\n",
+        "df.head()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#identifying data structure\n",
+        "# Check column names\n",
+        "df.columns\n",
+        "\n",
+        "# Check number of unique indicators\n",
+        "print(\"Unique indicators:\", df['Indicator Name'].nunique())\n",
+        "\n",
+        "# List all indicators\n",
+        "df['Indicator Name'].unique()[:10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s__gO9DveooX",
+        "outputId": "6fb2ed50-2e29-48bc-b6f1-a0a56a07024c"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Unique indicators: 1509\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Intentional homicides, female (per 100,000 female)',\n",
+              "       'Voice and Accountability: Standard Error',\n",
+              "       'Voice and Accountability: Number of Sources',\n",
+              "       'High-technology exports (% of manufactured exports)',\n",
+              "       'Export value index (2015 = 100)',\n",
+              "       'Merchandise exports to low- and middle-income economies in Sub-Saharan Africa (% of total merchandise exports)',\n",
+              "       'Merchandise exports to low- and middle-income economies in Europe & Central Asia (% of total merchandise exports)',\n",
+              "       'Merchandise exports (current US$)',\n",
+              "       'Insurance and financial services (% of commercial service exports)',\n",
+              "       'Agricultural raw materials exports (% of merchandise exports)'],\n",
+              "      dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
       ]
     }
   ]
