Listed all available indicators

--- a/data_explore.ipynb
+++ b/data_explore.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFVC3B5qxI7jy5KxaFklum",
+      "authorship_tag": "ABX9TyOvrRFVsLovCNoopudL20tQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -471,51 +471,81 @@
     {
       "cell_type": "code",
       "source": [
-        "#identifying data structure\n",
-        "# Check column names\n",
-        "df.columns\n",
-        "\n",
-        "# Check number of unique indicators\n",
-        "print(\"Unique indicators:\", df['Indicator Name'].nunique())\n",
-        "\n",
-        "# List all indicators\n",
-        "df['Indicator Name'].unique()[:10]"
+        "# Check unique countries in the dataset\n",
+        "print(df['Country Name'].unique())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "s__gO9DveooX",
-        "outputId": "6fb2ed50-2e29-48bc-b6f1-a0a56a07024c"
+        "id": "Eurb71w0hymE",
+        "outputId": "046ffa4e-ac13-4417-a1b5-a27eec3b5710"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Unique indicators: 1509\n"
+            "['Sri Lanka']\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Load the CSV file\n",
+        "df = pd.read_csv('/content/API_LKA_DS2_en_csv_v2_100021.csv', skiprows=4)  # skip metadata\n",
+        "\n",
+        "# Get unique indicators\n",
+        "indicator_list = df['Indicator Name'].unique()\n",
+        "\n",
+        "print(\"Total unique indicators:\", len(indicator_list))\n",
+        "print(\"\\nExample indicators:\\n\")\n",
+        "for ind in indicator_list[:20]:  # Show first 20 indicators\n",
+        "    print(\" -\", ind)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "0aau7-g8h6aO",
+        "outputId": "2bcc0b4f-87a1-4a0d-dc90-1a5b25caae32"
+      },
+      "execution_count": 9,
+      "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array(['Intentional homicides, female (per 100,000 female)',\n",
-              "       'Voice and Accountability: Standard Error',\n",
-              "       'Voice and Accountability: Number of Sources',\n",
-              "       'High-technology exports (% of manufactured exports)',\n",
-              "       'Export value index (2015 = 100)',\n",
-              "       'Merchandise exports to low- and middle-income economies in Sub-Saharan Africa (% of total merchandise exports)',\n",
-              "       'Merchandise exports to low- and middle-income economies in Europe & Central Asia (% of total merchandise exports)',\n",
-              "       'Merchandise exports (current US$)',\n",
-              "       'Insurance and financial services (% of commercial service exports)',\n",
-              "       'Agricultural raw materials exports (% of merchandise exports)'],\n",
-              "      dtype=object)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total unique indicators: 1509\n",
+            "\n",
+            "Example indicators:\n",
+            "\n",
+            " - Intentional homicides, female (per 100,000 female)\n",
+            " - Voice and Accountability: Standard Error\n",
+            " - Voice and Accountability: Number of Sources\n",
+            " - High-technology exports (% of manufactured exports)\n",
+            " - Export value index (2015 = 100)\n",
+            " - Merchandise exports to low- and middle-income economies in Sub-Saharan Africa (% of total merchandise exports)\n",
+            " - Merchandise exports to low- and middle-income economies in Europe & Central Asia (% of total merchandise exports)\n",
+            " - Merchandise exports (current US$)\n",
+            " - Insurance and financial services (% of commercial service exports)\n",
+            " - Agricultural raw materials exports (% of merchandise exports)\n",
+            " - Net barter terms of trade index (2015 = 100)\n",
+            " - Computer, communications and other services (% of commercial service imports)\n",
+            " - Merchandise imports by the reporting economy, residual (% of total merchandise imports)\n",
+            " - Merchandise imports from low- and middle-income economies in Latin America & the Caribbean (% of total merchandise imports)\n",
+            " - Merchandise imports from high-income economies (% of total merchandise imports)\n",
+            " - Manufactures imports (% of merchandise imports)\n",
+            " - Food imports (% of merchandise imports)\n",
+            " - Tariff rate, applied, weighted mean, primary products (%)\n",
+            " - Share of tariff lines with international peaks, primary products (%)\n",
+            " - Tariff rate, applied, weighted mean, all products (%)\n"
+          ]
         }
       ]
     }
